# Throughput

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  REBUILD_PLAN.md  REFACTOR_PLAN.md  ROGUELITE_DESIGN.md  THROUGHPUT-DESIGN.md  docker-compose.yml  plan.md  prototype-plan.md  tutorial.md
backend/: .gitignore  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/api/: frontlog.go  levels.go  logger.go  meta.go  progress.go  router.go  runs.go
backend/internal/models/: level.go  meta.go  progress.go  run.go
backend/internal/services/: levels.go  meta.go  progress.go  runs.go
backend/internal/storage/: level.go  meta.go  postgres.go  progress.go  runs.go
backend/static/: index.html
backend/static/assets/: index-B5T2naIF.css  index-CzTDvRm7.js
fleet/: AGENTS.md  Cargo.toml  TASKS.md  readme.md
fleet/crates/agv-core/: Cargo.toml
fleet/crates/agv-logger/: Cargo.toml
fleet/crates/agv-wasm/: Cargo.toml
fleet/crates/agv-wasm/src/: lib.rs
fleet/docs/: ARCHITECTURE.md  FSM.md  PLAN.md  api.md
fleet/plants/: demo-warehouse.json
fleet/web/: index.html  package-lock.json  package.json
fleet/web/public/: plants
fleet/web/src/: App.tsx
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  index.ts
frontend/src/constants/: colors.ts  config.ts
frontend/src/data/: escalation.ts  index.ts  milestones.ts  modifiers.ts  upgrades.ts
frontend/src/engine/: ability-preview.ts  astar.ts  collision.ts  crane.ts  decision.ts  diagnostics.ts  ep-system.ts  eta-service.ts  (+16 more)
(+88 files in other folders)
